[gd_scene load_steps=7 format=3 uid="uid://bw758t8yxr7j1"]

[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://Themes/rootTheme.tres" id="1_2fy1t"]
[ext_resource type="Script" path="res://Scripts/Menus/InventoryPanel/ItemDetailsPanel.gd" id="2_8fu0e"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://Themes/titleTextTheme.tres" id="2_l40qn"]
[ext_resource type="Texture2D" uid="uid://p871kcr0eyx6" path="res://Graphics/SOUVUTU0.png" id="4_g71b5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dttqc"]
atlas = ExtResource("4_g71b5")
region = Rect2(96, 56, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_eagk5"]
atlas = ExtResource("4_g71b5")
region = Rect2(96, 32, 8, 8)

[node name="ItemDetailsPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2fy1t")
script = ExtResource("2_8fu0e")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 80.0
offset_right = 1200.0
offset_bottom = 880.0

[node name="ItemName" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 25.0
offset_right = 250.0
offset_bottom = 75.0
grow_horizontal = 2
theme = ExtResource("2_l40qn")
bbcode_enabled = true
text = "[center]Item Name Goes Here[/center]"
fit_content = true

[node name="ItemSprite" type="Sprite2D" parent="Panel"]
position = Vector2(182, 80)
scale = Vector2(8, 8)
texture = SubResource("AtlasTexture_dttqc")

[node name="ItemType" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 88.0
offset_right = 100.0
offset_bottom = 122.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
bbcode_enabled = true
text = "[center]Item Type Here[/center]"
fit_content = true

[node name="ItemDescription" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 60.0
offset_top = -216.0
offset_right = -60.0
offset_bottom = 238.0
grow_horizontal = 2
grow_vertical = 2
text = "This is a really long item description. This will help me test the Item Details Panel, which will display the details of the selected item, as well as (if in an inventory) the amount of that item that is present. The general idea is to give a lot of lore/backstory to these items, describe how they work, and maybe tell the player where they can be found! Hopefully there is enough room for all of this text, easily."

[node name="ItemCostGroup" type="Control" parent="Panel"]
anchors_preset = 0
offset_left = 850.0
offset_top = 54.0
offset_right = 952.0
offset_bottom = 86.0

[node name="GoldSprite" type="Sprite2D" parent="Panel/ItemCostGroup"]
position = Vector2(16, 16)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_eagk5")

[node name="ItemCost" type="RichTextLabel" parent="Panel/ItemCostGroup"]
clip_contents = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -13.0
offset_right = 102.0
offset_bottom = 13.0
grow_vertical = 2
text = "456,789"
fit_content = true

[node name="ItemCount" type="RichTextLabel" parent="Panel"]
clip_contents = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -260.0
offset_top = 88.0
offset_right = -170.0
offset_bottom = 114.0
grow_horizontal = 0
text = "x234 / 567"
fit_content = true

[node name="BackButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -60.0
offset_right = 25.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_button_pressed"]
